--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -67,7 +67,7 @@
 @tree-view-border-color: @tool-panel-border-color;
 
 @scrollbar-background-color: @app-background-color;
-@scrollbar-color: fade(@text-color, 5%);
+@scrollbar-color: fade(@text-color, 20%);
 
 @ui-site-color-1: @background-color-success;
 @ui-site-color-2: @background-color-info;
